[tool.poetry]
name = "miuc"
version = "0.1.0"
description = "Markdown Intelligence Url Complete"
authors = ["luzhixing12345 <luzhixing12345@163.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
miuc = 'miuc.main:main'